# patterns

./: .gitignore
patterns.1/: main.cpp
patterns.1/game/: CMakeLists.txt  Readme.md  main.cpp
patterns.1/game/include/: Direction.h  Game.h  IObject.h  ObjectFactory.h  Point.h  context.h
patterns.1/game/resources/: apple  beer  carrot  cheese  eaten_apple  glass  kettle  m&m  obstacles_list.txt  rocket
patterns.1/game/src/: Game.cpp  ObjectFactory.cpp  ObjectImpl.cpp  ObjectImpl.h  Point.cpp
patterns.2/TypeList/: .gitignore  CMakeLists.txt  main.cpp
patterns.2/TypeList/include/: genericfunctor.h  typelist.h  typelistio.h
patterns.2/TypeList/include/_genericfunctor/: _genericfunctor.hpp
patterns.2/TypeList/include/_reader/: _printer.hpp  _reader.hpp
patterns.2/TypeList/include/_typelist/: _contains.hpp  _equal.hpp  _isempty.hpp  _length.hpp  _typeat.hpp  _typelist.hpp
patterns.2/TypeList/include/_typelistio/: _allocsize.hpp  _decompressreader.hpp  _doubledecompressreader.hpp  _dumbdeleter.h  _dumbprinter.hpp  _dumbreader.hpp  _nulltypes.hpp  _reader.hpp  _readerutils.hpp  _template.h
patterns.2/TypeList/tests/genericFunctor/: genericfunctor_test.cpp
patterns.2/TypeList/tests/reader/: decompressTest.cpp  doubledecompressTest.cpp  dumb_reader_test.cpp  reader.cpp  reader_test.cpp
patterns.2/TypeList/tests/reader/_aux/: _aux.cpp  _aux.h
patterns.2/TypeList/tests/reader/data/: ddr0.txt  dr0.txt  reader0.txt
patterns.2/TypeList/tests/typelist/: typelist.cpp  typelist_test.cpp
patterns.2/reader/: CMakeLists.txt
patterns.2/reader/include/: AllocSize.hpp  allocsize.hpp  printer.hpp  reader.hpp  typelist.h
patterns.2/reader/tests/: hello.txt
patterns.2/reader/tests_src/: test.cpp
patterns.2/typelist/: .gitignore  CMakeLists.txt
patterns.2/typelist/include/: ObjectList.hpp  typelist.hpp
patterns.2/typelist/tests/: test.cpp
